# trivial-argument-parser

./: .gitignore  Cargo.toml  LICENSE  README.md  docs.txt
src/: argument.rs  builder.rs  lib.rs  parsable_argument.rs
src/argument/: builder.rs  legacy_argument.rs  mod.rs  parsable_argument.rs
